--- a/admin-default.properties
+++ b/admin-default.properties
@@ -48,7 +48,7 @@ hibernate.format_sql=false
 hibernate.connection.charSet=utf8
 hibernate.cache.use_second_level_cache=false
 hibernate.cache.use_query_cache=false
-hibernate.cache.use_structured_entries=fals
+hibernate.cache.use_structured_entries=false
 hibernate.generate_statistics=false
 
 ## Use registration
@@ -186,11 +186,11 @@ mosip.admin-services.open-id.clientsecret=${mosip.mosip.admin.client.secret}
 
 #tempuri=https://admin.v3box1.mosip.net
 #mosip.admin-services.redirecturi=${tempuri}/v1/admin/login-redirect/
-mosip.admin-services.redirecturi=https://qa.pkiblog.com/v1/admin/login-redirect/
+mosip.admin-services.redirecturi=${mosip.api.internal.url}/v1/admin/login-redirect/
 mosip.admin-services.open-id.login_flow.scope=email
 mosip.admin-services.open-id.login_flow.response_type=code
 mosip.admin-services.open-id.authorization_endpoint=${keycloak.external.host}/auth/realms/{realmId}/protocol/openid-connect/auth
-mosip.admin-services.open-id.token_endpoint=${keycloak.external.host}/auth/realms/{realmId}/protocol/openid-connect/token
+mosip.admin-services.open-id.token_endpoint=${keycloak.external.hostl}/auth/realms/{realmId}/protocol/openid-connect/token
 mosip.admin-services.cookie.security=true
 
 mosip.ui.spec.default.domain=registration-client
@@ -204,7 +204,7 @@ mosip.security.secure-cookie=false
 # IAM
 mosip.iam.module.login_flow.name=authorization_code
 mosip.iam.module.clientID=mosip-admin-client
-mosip.iam.module.clientsecret=xyz123
+mosip.iam.module.clientsecret=${mosip.mosip.admin.client.secret}
 mosip.iam.module.redirecturi=${mosip.api.internal.url}/v1/admin/login-redirect/
 #mosip.iam.module.redirecturi=${tempuri}/v1/admin/login-redirect/
 #mosip.iam.module.login_flow.scope=cls
@@ -226,12 +226,12 @@ mosip.iam.adapter.appid=admin
 mosip.iam.adapter.clientid=mosip-admin-client
 mosip.iam.adapter.clientsecret=${mosip.mosip.admin.client.secret}
 mosip.iam.adapter.issuerURL=${keycloak.external.host}/auth/realms/mosip
-mosip.authmanager.client-token-endpoint=http://kernel-auth-service/v1/authmanager/authenticate/clientidsecretkey
-#mosip.authmanager.client-token-endpoint=${mosip.kernel-auth-service.url}/v1/authmanager/authenticate/clientidsecretkey
+																												
+mosip.authmanager.client-token-endpoint=${mosip.kernel-auth-service.url}/v1/authmanager/authenticate/clientidsecretkey
 # in minutes
-mosip.iam.adapter.validate-expiry-check-rate=15
+mosip.iam.adapter.validate-expiry-check-rate=1440
 # in minutes
-mosip.iam.adapter.renewal-before-expiry-interval=15
+mosip.iam.adapter.renewal-before-expiry-interval=1440
 #this should be false if you don?t use this restTemplate true if you do
 mosip.iam.adapter.self-token-renewal-enable=true
 
@@ -295,12 +295,13 @@ mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.u
 
 
 # this property are used in AdminProxyService to get base url and version
-mosip.admin.masterdata.service.version=kernel-masterdata-service.default:80/v1
-mosip.admin.keymanager.service.version=kernel-keymanager-service.default/v1
-mosip.admin.base.url=https://qa.pkiblog.com
+mosip.admin.masterdata.service.version=masterdata.kernel/v1
+mosip.admin.keymanager.service.version=keymanager.keymanager/v1
+mosip.admin.base.url=http:/
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
+auth.allowed.urls=https://${mosip.admin.host}/
 
-auth.allowed.urls=http://admin.default/
+									   
 
 # query param usd to refer url to redirect after logout
 mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
