--- a/admin-default.properties
+++ b/admin-default.properties
@@ -293,16 +293,13 @@ mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.u
 
 
 
-
 # this property are used in AdminProxyService to get base url and version
-mosip.admin.masterdata.service.version=masterdata.kernel/v1
-mosip.admin.keymanager.service.version=keymanager.keymanager/v1
-mosip.admin.base.url=http:/
+mosip.admin.masterdata.service.url=${mosip.kernel-masterdata-service.url}/v1
+mosip.admin.keymanager.service.url=${mosip.kernel-keymanager-service.url}/v1
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
-auth.allowed.urls=http://admin.default/
-
-									   
-
+auth.allowed.urls=${mosip.api.internal.url}/admin-ui/
+mosip.kernel.csrf_ignore.url=/login/**,/logout/**
+mosip.admin.base.url=
 # query param usd to refer url to redirect after logout
 mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
 # end session endpoint in OIDC
