--- a/admin-default.properties
+++ b/admin-default.properties
@@ -291,15 +291,14 @@ mosip.kernel.keymanager.getcertificate=${mosip.kernel.keymanager.url}/v1/keymana
 mosip.kernel.keymanager.uploadcertificate=${mosip.kernel.keymanager.url}/v1/keymanager/uploadCertificate
 mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.url}/v1/keymanager/uploadOtherDomainCertificate
 
-
-
 # this property are used in AdminProxyService to get base url and version
-mosip.admin.masterdata.service.url=${mosip.kernel-masterdata-service.url}/v1
-mosip.admin.keymanager.service.url=${mosip.kernel-keymanager-service.url}/v1
+mosip.admin.masterdata.service.version=masterdata.kernel/v1
+mosip.admin.keymanager.service.version=keymanager.keymanager/v1
+mosip.admin.base.url=http:/
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
-auth.allowed.urls=${mosip.api.internal.url}/admin-ui/
-mosip.kernel.csrf_ignore.url=/login/**,/logout/**
-mosip.admin.base.url=
+auth.allowed.urls=https://${mosip.admin.host}/
+												 
+
 # query param usd to refer url to redirect after logout
 mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
 # end session endpoint in OIDC
