--- a/admin-default.properties
+++ b/admin-default.properties
@@ -292,8 +292,9 @@ mosip.kernel.keymanager.uploadcertificate=${mosip.kernel.keymanager.url}/v1/keym
 mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.url}/v1/keymanager/uploadOtherDomainCertificate
 
 # this property are used in AdminProxyService to get base url and version
-mosip.admin.masterdata.service.version=masterdata.kernel/v1
-mosip.admin.keymanager.service.version=keymanager.keymanager/v1
+# this property are used in AdminProxyService to get base url and version
+mosip.admin.masterdata.service.url=${mosip.kernel-masterdata-service.url}/v1
+mosip.admin.keymanager.service.url=${mosip.kernel-keymanager-service.url}/v1
 mosip.admin.base.url=http:/
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 auth.allowed.urls=https://${mosip.admin.host}/
