--- a/admin-default.properties
+++ b/admin-default.properties
@@ -299,7 +299,7 @@ mosip.admin.keymanager.service.version=v1
 mosip.admin.base.url=https://qa.pkiblog.com
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 
-auth.allowed.urls=http://admin.default/
+auth.allowed.urls=https://qa.pkiblog.com/admin-ui
 
 # query param usd to refer url to redirect after logout
 mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
